Pokemon add form added

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "dotenv-webpack": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
@@ -43,5 +44,10 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.2.4"
+  },
+  "react-dotenv": {
+    "whitelist": [
+      "BASE_URL"
+    ]
   }
 }
